# SayIt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
client/: .env.development  .eslintrc.cjs  index.html  overlay.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src-tauri/: Cargo.toml  build.rs  sayit-settings-2026-04-27T01-45-59-829Z.json  tauri.conf.json
client/src-tauri/.cargo/: config.toml
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: main.rs
client/src-tauri/src/commands/: audio.rs  diagnostics.rs  export.rs  mod.rs  paste.rs  shortcuts.rs  storage.rs  system.rs  window.rs
client/src-tauri/src/context/: mod.rs
client/src-tauri/src/inject/: mod.rs
client/src-tauri/src/keyboard/: mod.rs
client/src-tauri/src/models/: catalog.rs  downloader.rs  local_asr.rs  mod.rs  registry.rs  test_audio.rs
client/src-tauri/src/providers/: ai_ollama.rs  ai_openai_compat.rs  asr_doubao.rs  asr_doubao_realtime.rs  asr_doubao_stream.rs  asr_qwen.rs  asr_qwen_omni.rs  asr_qwen_realtime.rs  doubao_protocol.rs  mod.rs  registry.rs  types.rs
client/src-tauri/src/storage/: migration_001.sql  mod.rs
client/src-tauri/src/window/: mod.rs
docs/: SayIt AI 润色供应商配置.md  SayIt 语音识别配置.md  UX-导航与设置重构分析.md
server/: .dockerignore  .env.example  .gitignore  README.md  config.example.yaml  docker-compose.yml  ruff.toml
server/backend/: Dockerfile  entrypoint.sh  requirements.txt
server/gateway/: Dockerfile  package.json  proxy.mjs
server/prompts/: hotwords.txt  system.txt  user.txt
server/web/: admin.css  admin.html  admin.js  (+4 more)
(+149 files in other folders)
